--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "terminal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.5",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@kubernetes/client-node": "0.18.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "axios": "1.2.1",
+    "js-yaml": "^4.1.0",
+    "sealos-desktop-sdk": "^0.1.11",
+    "zustand": "^4.1.5",
+    "immer": "^9.0.16"
+  },
+  "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
+    "@types/node": "18.15.5",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "sass": "^1.57.1"
   }
 }
