--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "@kubernetes/client-node": "0.18.0",
+    "@tanstack/react-query": "^4.28.0",
+    "axios": "1.2.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "immer": "^9.0.16",
+    "js-yaml": "^4.1.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2",
-    "axios": "1.2.1",
-    "js-yaml": "^4.1.0",
     "sealos-desktop-sdk": "^0.1.11",
-    "zustand": "^4.1.5",
-    "immer": "^9.0.16"
+    "typescript": "5.0.2",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
