build terminal-frontend

--- a/.github/workflows/dockerize-web.yml
+++ b/.github/workflows/dockerize-web.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/costcenter
+            ghcr.io/${{ github.repository_owner }}/terminal-frontend
           # https://github.com/docker/metadata-action#typesemver
           tags: |
             type=raw,value=latest,enable=true
@@ -40,7 +40,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
